# darktable-ai

./: .gitignore  .gitmodules  README.md  eval.sh  pyproject.toml  run.sh  run_all.sh
.github/workflows/: build-models.yml
darktable_ai/: config.py  convert.py
evaluation/mask/: evaluate.py  requirements.txt
models/: common.sh  validate.py
models/denoise-nafnet/: .gitignore  README.md  convert.py  demo.py  model.conf  requirements.txt
models/denoise-nind/: .gitignore  README.md  convert.py  demo.py  model.conf  optional-requirements.txt  requirements.txt
models/embed-openclip-vitb32/: README.md  convert.py  demo.py  model.yaml  tags.md
models/mask-object-sam21-small/: README.md  convert.py  model.yaml
models/mask-object-sam21-tiny/: README.md  demo.py  model.yaml
models/mask-object-segnext-b2hq/: .gitignore  README.md  convert.py  demo.py  model.conf  model.yaml  requirements.txt
models/upscale-bsrgan/: README.md  convert.py  demo.py  model.conf  requirements.txt
